--- a/wp-content/themes/themesCCM/assets/css/main.css
+++ b/wp-content/themes/themesCCM/assets/css/main.css
@@ -7,7 +7,7 @@
    ================================================== */
 @font-face {
   font-family: "Imperial";
-  src: url("../fonts/PlayfairDisplay-VariableFont_wght.ttf");
+  src: url("../fonts/urwimperialt.otf");
 }
 
 /* VARIABLES */
