--- a/wp-content/themes/themesCCM/assets/css/admision.css
+++ b/wp-content/themes/themesCCM/assets/css/admision.css
@@ -54,7 +54,8 @@ h3 {
   color: var(--color-gold);
 }
 p {
-  color: var(--texto-principal);
+  color: #8f8f8f;
+  font-size: var(--size-primario);
 }
 .btn-basica {
   background-color: var(--color-primario);
@@ -68,4 +69,8 @@ p {
 a,
 a > p {
   color: var(--color-primario);
+}
+.barra-p {
+  font-size: 16px;
+  color: var(--color-secundario);
 }
