--- a/wp-content/themes/themesCCM/assets/css/main.css
+++ b/wp-content/themes/themesCCM/assets/css/main.css
@@ -103,7 +103,10 @@ body {
   font-size: 24px;
   text-align: center;
 }
-
+.barra-p {
+  font-size: 16px;
+  text-align: var(--color-secundario);
+}
 /* LOGO */
 .logo {
   width: 100px;
