--- a/wp-content/themes/themesCCM/assets/css/talleres.css
+++ b/wp-content/themes/themesCCM/assets/css/talleres.css
@@ -64,3 +64,8 @@ body {
   color: var(--texto-principal);
   font-family: "Imperial";
 }
+
+.btn-taller {
+  background-color: var(--color-primario);
+  color: white;
+}
